--- a/deploy.yml
+++ b/deploy.yml
@@ -2,7 +2,7 @@
 - hosts: keller.com
   vars:
   - warName: java-example.war
-  - warRemotePath: /opt/apache-tomcat-8.5.78/webapps/
+  - warRemotePath: /home/devops/apache-tomcat-9.0.70/webapps/
 
   tasks:
   - name: Copy WAR to Remote server
