--- a/deploy.yml
+++ b/deploy.yml
@@ -1,5 +1,6 @@
 ---
 - hosts: localhost
+  became: true
   vars:
   - warName: java-example.war
   - warRemotePath: /home/devops/apache-tomcat-9.0.70/webapps/
