--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: localhost
-  became: true
+  became: yes
   vars:
   - warName: java-example.war
   - warRemotePath: /home/devops/apache-tomcat-9.0.70/webapps/
