--- a/deploy.yml
+++ b/deploy.yml
@@ -2,7 +2,7 @@
 - hosts: localhost
   vars:
   - warName: java-example.war
-  - warRemotePath: /opt/tomcat/apache-tomcat-9.0.70/webapps/
+  - warRemotePath: /opt/tomcat/webapps/
 
   tasks:
   - name: Copy WAR to Remote server
